Fix: Ultimando detalles para salida a producción

--- a/validator/templates/emails/approval_admin.html
+++ b/validator/templates/emails/approval_admin.html
@@ -203,7 +203,7 @@
                     {% endif %}
                     {% if monto_aprobado %}
                     <div class="info-row">
-                        <span class="label">Monto Aprobado:</span>
+                        <span class="label">Monto Dispoible:</span>
                         <span class="value">${{ monto_aprobado|floatformat:0|default:"No especificado" }}</span>
                     </div>
                     {% endif %}
